# LiveQueue

./: .gitignore  Cargo.toml  README.md  TODO.md
client/: esbuild.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
client/src/: global.d.ts  index.ts
src/: lib.rs  main.rs
templates/: index.html  layout.html
templates/components/: ticket_update.html
