[package]
name = "live_queue"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["macros", "ws"] }
serde = { version = "1.0.228", features = ["derive"] }
askama = "0.14.0"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
displaydoc = "0.2.5"
thiserror = "2.0.17"
futures-util = "0.3.31"
async-stream = "0.3.6"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tower-http = { version = "0.6.6", features = ["fs"] }
